--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,16 @@
-certifi==2025.10.5
-charset-normalizer==3.4.3
+colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
-flexcache==0.3
-flexparser==0.4
 fonttools==4.60.1
-idna==3.10
 kiwisolver==1.4.9
 LightwaveExplorer==2025.2.4
-matplotlib==3.10.6
-MPSPlots==1.8.1
+matplotlib==3.10.7
 numpy==2.3.3
 packaging==25.0
-pandas==2.3.3
 pillow==11.3.0
-Pint==0.25
-Pint-Pandas==0.7.1
-platformdirs==4.5.0
-PyOptik==2.0.3
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
-pytz==2025.2
 PyYAML==6.0.3
-requests==2.32.5
 scipy==1.16.2
 six==1.17.0
-tabulate==0.9.0
-TypedUnit==0.0.8
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
+tqdm==4.67.1
